apps/istio-ingress/base/envoy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-ip-restrictions
  namespace: default
spec:
  workloadLabels:
    app: sleep
  filters:
    - filterName: envoy.filters.network.rbac
      filterType: NETWORK
      filterConfig:
        rules:
          action: ALLOW
          policies:
            "ip-restrictions":
              permissions:
                - any: true
              principals:
                - source_ip:
                    address_prefix: 1.2.3.4
                    prefix_len: 32
                - source_ip:
                    address_prefix: 5.6.7.8
                    prefix_lenbad: 32
        stat_prefix: ingress-ip-restrictions
